# roboemployee

./: CLAUDE.md  PROJECT_STATUS.md  README.md  gazebo_checklist_status.md
3d escritorio/: f8fe65f8-8d7b-4bbf-a14c-457c60f2b849.mtl
3d escritorio/body1_structure/: body1_structure.xml
ROS2_g1/install/: local_setup.sh  setup.sh
ROS2_g1/log/: latest_build
ROS2_g1/src/g1_description/: CMakeLists.txt  PHASE2_3D_SCALING.md  README.md  g1_29dof_rev_1_0_with_inspire_hand_DFQ.urdf
ROS2_g1/src/g1_description/launch/: g1_empty_world.launch.py
ROS2_g1/src/g1_description/scripts/: fix_obj_scale.py  smart_scale_obj.py
ROS2_g1/src/g1_description/urdf/: g1_gazebo.urdf
old_tests/: PROJECT_STATUS.md  README.md  all_groups.txt  analyze_body_groups.py  analyze_obj.py  analyze_obj_simple.py  analyze_wall_geometry.py  analyze_wall_scale.py  analyze_wall_structure.py  check_mujoco_install.sh  check_sdk_install.sh  check_wall_content.py  compare_scale.sh  extract_walls.py  find_real_walls.py  g1_office_complete.xml  g1_office_complete_fixed.xml  g1_office_final.xml  g1_office_fixed.xml  g1_office_integrated.xml  g1_office_scale_fixed.xml  g1_office_scene.xml  g1_office_unified.xml  g1_office_working.xml  install_sdk_manually.sh  launch_g1_office.sh  run_g1_office.sh  run_g1_simulation.sh  test_body1_corrected.xml  test_body1_scene.xml  test_g1_direct.sh  test_g1_hands.py  test_walls_scaled.xml  test_walls_scene.xml  test_walls_simple.xml  verify_g1_setup.sh
old_tests/mujoco_simulations/docs/: CLAUDE_MUJOCO_ORIGINAL.md  MUJOCO_LOG.TXT  OBJ_to_MuJoCo_Guide.md  (+1 more)
(+46 files in other folders)
